# aw-shuffle

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  interface.go  notes  picker.go  picker_test.go  unsafe.go  unsafe_test.go
aw-shuffle/: Cargo.toml
aw-shuffle/benches/: benchmarks.rs
aw-shuffle/src/: infallible.rs  lib.rs
aw-shuffle/src/persistent/: mod.rs  rocksdb.rs
aw-shuffle/src/rbtree/: mod.rs
internal/: base.go  base_test.go  errors.go  hasher.go  random.go  rbtree.go  rbtree_test.go
persistent/: persist.go  persist_test.go
strpick/: Cargo.toml  main.go
strpick/src/: main.rs
