[package]
name = "aw-shuffle"
version = "0.1.0"
edition = "2021"
description = "Library for randomly selecting items, favouring less recently selected items."
readme = "../README.md"
license = "MIT"
keywords = ["shuffle"]
homepage = "https://github.com/awused/aw-shuffle"
repository = "https://github.com/awused/aw-shuffle"

[features]
persistent = ["serde", "rmp-serde"]
rocks = ["persistent", "rocksdb"]

[dependencies]
ahash = "0.8.3"
rand = "0.8.5"
rmp-serde = { version = "1.1.1", optional = true }
rocksdb = { version = "0.21.0", default-features = false, features = ["lz4"], optional = true }
serde = { version = "1.0.171", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
