[package]
name = "aw-shuffle"
version = "0.1.0"
edition = "2024"
description = "Library for randomly selecting items, favouring less recently selected items."
readme = "../README.md"
license = "MIT"
keywords = ["shuffle"]
homepage = "https://github.com/awused/aw-shuffle"
repository = "https://github.com/awused/aw-shuffle"

[features]
persistent = ["serde", "rmp-serde"]
rocks = ["persistent", "rocksdb"]

[dependencies]
ahash = "0.8.12"
rand = "0.9.2"
rmp-serde = { version = "1.3.0", optional = true }
rocksdb = { version = "0.24.0", default-features = false, features = ["lz4"], optional = true }
serde = { version = "1.0.225", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
