[package]
name = "strpick"
version = "0.1.0"
edition = "2021"
description = "Simple binary interface for shuffling strings using aw-shuffle and persisting state to a database."
readme = "../README.md"
license = "MIT"
keywords = ["shuffle"]
homepage = "https://github.com/awused/aw-shuffle"
repository = "https://github.com/awused/aw-shuffle"


[dependencies]
aw-shuffle = { path = "../aw-shuffle", features = [ "rocks" ] }
clap = { version = "4.5.20", features = ["derive"] }
rmpv = "1.3.0"
rocksdb = { version = "0.22.0", default-features = false, features = ["lz4"] }
tempfile = "3.13.0"
unicode-width = "0.2.0"

